fix z-index for importing div

--- a/app/stylesheets/forms/_email.scss
+++ b/app/stylesheets/forms/_email.scss
@@ -382,8 +382,8 @@
   position: fixed;
   top: 75px;
   right: 20px;
-  left: 426px;
-  z-index: 99;
+  left: 32%;
+  z-index: 2000;
   @include box-sizing(border-box);
   @include box-shadow(0 2px 2px rgba(black, 0.25));
 }
